fix shared layout header icon whitespace

--- a/app/styles/_specific.scss
+++ b/app/styles/_specific.scss
@@ -17,6 +17,7 @@
   transform: rotate(210deg);
   position: relative;
   top: .1875rem;
+  left: .5em;
 }
 
 [data-inline] {
